Login and register working. Spring security almost done

--- a/src/main/resources/static/assets/css/shards.css
+++ b/src/main/resources/static/assets/css/shards.css
@@ -45,7 +45,8 @@ body {
     font-size: 1rem;
     font-weight: 300;
     color: #5a6169;
-    background-color: #fff
+    background-color: #fff;
+
 }
 
 a {
