--- a/src/main/resources/templates/client/fragments/navbar.html
+++ b/src/main/resources/templates/client/fragments/navbar.html
@@ -16,7 +16,20 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 </div>
-
+<div th:remove="tag" th:fragment="header-simple">
+    <title>tupunto</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--CSS REQUIRED-->
+    <link rel="icon" th:href="@{/assets/img/favicon.ico}">
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/bootstrap.min.css}" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+          integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/shards.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/main-style.css}">
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+</div>
 <!-- NAVBARS -->
 <body>
 <nav th:fragment="index"  id="navbar-index" class="navbar navbar-expand-lg navbar-dark pt-0 mt-1">
