--- a/src/main/resources/templates/client/search.html
+++ b/src/main/resources/templates/client/search.html
@@ -5,7 +5,7 @@
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyCXeby84Czz7k7aBjHuUGw8BZEhhl-k_qI"></script>
 
-<body>
+<body class="normal-line-height">
 <!--nav bar -->
 <header id="menu-search" class="bg-light">
     <nav th:replace="client/fragments/navbar::commun"></nav>
@@ -44,12 +44,15 @@
                                         <div class="salient-fav fav-format">
                                             <i class="fas fa-star text-warning"></i>
                                         </div>
+                                        <div class="salient-interest d-flex justify-content-around">
+                                            <i class="fas fa-heart text-danger fav-format"></i>
+                                            <i class="fas fa-ban text-danger fav-format"></i>
+                                        </div>
                                     </div>
 
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <h5 class="card-title text-accent">Amplia y recién construida</h5><i
-                                                class="fas fa-heart text-danger fav-format"></i>
+                                            <h5 class="card-title text-accent">Amplia y recién construida</h5>
                                         </div>
                                         <h5><i class="fas fa-dollar-sign">1000</i></h5>
                                         <hr>
@@ -86,12 +89,15 @@
                                         <div class="salient-fav fav-format">
                                             <i class="fas fa-star text-warning"></i>
                                         </div>
+                                        <div class="salient-interest d-flex justify-content-around">
+                                            <i class="fas fa-heart text-danger fav-format"></i>
+                                            <i class="fas fa-ban text-danger fav-format"></i>
+                                        </div>
                                     </div>
 
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <h5 class="card-title text-accent">Exculsiva del sitio web</h5><i
-                                                class="fas fa-heart text-danger fav-format"></i>
+                                            <h5 class="card-title text-accent">Exculsiva del sitio web</h5>
                                         </div>
                                         <h5><i class="fas fa-dollar-sign">1000</i></h5>
                                         <hr>
@@ -128,12 +134,15 @@
                                         <div class="salient-fav fav-format">
                                             <i class="fas fa-star text-warning"></i>
                                         </div>
+                                        <div class="salient-interest d-flex justify-content-around">
+                                            <i class="fas fa-heart text-danger fav-format"></i>
+                                            <i class="fas fa-ban text-danger fav-format"></i>
+                                        </div>
                                     </div>
 
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <h5 class="card-title text-accent">Diseño rústico</h5><i
-                                                class="fas fa-heart text-danger fav-format"></i>
+                                            <h5 class="card-title text-accent">Diseño rústico</h5>
                                         </div>
                                         <h5><i class="fas fa-dollar-sign">1000</i></h5>
                                         <hr>
@@ -170,12 +179,15 @@
                                         <div class="salient-fav fav-format">
                                             <i class="fas fa-star text-warning"></i>
                                         </div>
+                                        <div class="salient-interest d-flex justify-content-around">
+                                            <i class="fas fa-heart text-danger fav-format"></i>
+                                            <i class="fas fa-ban text-danger fav-format"></i>
+                                        </div>
                                     </div>
 
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <h5 class="card-title text-accent">Removida a final de agosto</h5><i
-                                                class="fas fa-heart text-danger fav-format"></i>
+                                            <h5 class="card-title text-accent">Removida a final de agosto</h5>
                                         </div>
                                         <h5><i class="fas fa-dollar-sign">1000</i></h5>
                                         <hr>
@@ -212,12 +224,15 @@
                                         <div class="salient-fav fav-format">
                                             <i class="fas fa-star text-warning"></i>
                                         </div>
+                                        <div class="salient-interest d-flex justify-content-around">
+                                            <i class="fas fa-heart text-danger fav-format"></i>
+                                            <i class="fas fa-ban text-danger fav-format"></i>
+                                        </div>
                                     </div>
 
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <h5 class="card-title text-accent">Recién remodelada</h5><i
-                                                class="fas fa-heart text-danger fav-format"></i>
+                                            <h5 class="card-title text-accent">Recién remodelada</h5>
                                         </div>
                                         <h5><i class="fas fa-dollar-sign">1000</i></h5>
                                         <hr>
@@ -254,12 +269,15 @@
                                         <div class="salient-fav fav-format">
                                             <i class="fas fa-star text-warning"></i>
                                         </div>
+                                        <div class="salient-interest d-flex justify-content-around">
+                                            <i class="fas fa-heart text-danger fav-format"></i>
+                                            <i class="fas fa-ban text-danger fav-format"></i>
+                                        </div>
                                     </div>
 
                                     <div class="card-body">
                                         <div class="d-flex justify-content-between align-items-center">
-                                            <h5 class="card-title text-accent">Se necesita inquilino, rápido</h5><i
-                                                class="fas fa-heart text-danger fav-format"></i>
+                                            <h5 class="card-title text-accent">Se necesita inquilino, rápido</h5>
                                         </div>
                                         <h5><i class="fas fa-dollar-sign">1000</i></h5>
                                         <hr>
