--- a/src/main/resources/static/assets/css/main-style.css
+++ b/src/main/resources/static/assets/css/main-style.css
@@ -114,10 +114,10 @@
 }
 .salient-fav{
     position: absolute;
-    top: 0;
+    top: 3%;
     left: 0.3em;
-    text-shadow: 0 0.46875rem 2.1875rem rgba(0, 0, 0, 0.5), 0 0.9375rem 1.40625rem rgba(0, 0, 0, 0.05),
-    0 0.25rem 0.53125rem rgba(0,0,0,.1), 0 0.125rem 0.1875rem rgba(0,0,0,.1);
+    text-shadow: 0 0.46875rem 2.1875rem rgba(241, 241, 241, 0.5), 0 0.9375rem 1.40625rem rgba(213, 213, 213, 0.05),
+    0 0.25rem 0.53125rem rgba(226, 226, 226, 0.1), 0 0.125rem 0.1875rem rgba(243, 243, 243, 0.1);
 }
 .salient-interest{
     position: absolute;
@@ -126,8 +126,8 @@
     border-radius: 0;
 }
 .salient-interest>i{
-    text-shadow: 0 0.46875rem 2.1875rem rgba(0, 0, 0, 0.5), 0 0.9375rem 1.40625rem rgba(0, 0, 0, 0.05),
-    0 0.25rem 0.53125rem rgba(0,0,0,.1), 0 0.125rem 0.1875rem rgba(0,0,0,.1);
+    text-shadow: 0 0.46875rem 2.1875rem rgba(241, 241, 241, 0.5), 0 0.9375rem 1.40625rem rgba(213, 213, 213, 0.05),
+    0 0.25rem 0.53125rem rgba(226, 226, 226, 0.1), 0 0.125rem 0.1875rem rgba(243, 243, 243, 0.1);
 }
 .salient-action {
     background: #e67e22;
@@ -357,6 +357,9 @@ ul#menu-top-index> li:last-child  {
     font-weight: bold;
     font-size: 14px;
     text-transform: capitalize;
+}
+.normal-line-height{
+    line-height: 1 !important;
 }
 
 
