--- a/src/main/resources/templates/client/client-login.html
+++ b/src/main/resources/templates/client/client-login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="client/fragments/navbar::headerfiles"></head>
+<head th:replace="client/fragments/navbar::header-simple"></head>
 <header>
     <div class="bg-light pr-1 pl-1">
         <nav th:replace="client/fragments/navbar::commun"></nav>
@@ -10,50 +10,39 @@
 <body>
 <div class="container-fluid mt-4">
     <div class="row d-flex justify-content-center">
-        <div class="col-lg-6">
+        <div class="col-lg-4">
             <div class="card card-small mb-4">
-                <div class="card-header border-bottom">
-                    <h6 class="m-0">Ingresa sesión</h6>
+                <div class="card-header bg-primary border-bottom">
+                    <h4 class="m-0 text-white text-center">Ingresa sesión</h4>
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item p-3">
                         <div class="row">
-                            <div class="col">
-                                <form>
+                            <form class="col" method="POST" action="/login">
+                                <div class="form-group d-flex flex-column justify-content-center" th:classappend="${error} ? 'has-error':''">
                                     <div class="form-row">
-                                        <div class="form-group col-md-6">
-                                            <label for="feFirstName">First Name</label>
-                                            <input type="text" class="form-control" id="feFirstName"
-                                                   placeholder="First Name" value="Sierra">
+                                        <!-- Username input -->
+                                        <div class="form-group col-md-12">
+                                            <label for="email">Correo electronico</label>
+                                            <input type="email" class="form-control" id="email"
+                                                   placeholder="Correo electronico">
                                         </div>
-                                        <div class="form-group col-md-6">
-                                            <label for="feLastName">Last Name</label>
-                                            <input type="text" class="form-control" id="feLastName"
-                                                   placeholder="Last Name"
-                                                   value="Brooks">
+                                        <!--/ Username input -->
+                                        <!-- Password input -->
+                                        <div class="form-group col-md-12">
+                                            <label for="password">Contraseña</label>
+                                            <input type="password" class="form-control" id="password"
+                                                   placeholder="Contraseña">
                                         </div>
-                                    </div>
-                                    <div class="form-row">
-                                        <div class="form-group col-md-6">
-                                            <label for="feEmailAddress">Email</label>
-                                            <input type="email" class="form-control" id="feEmailAddress"
-                                                   placeholder="Email"
-                                                   value="sierra@example.com">
-                                        </div>
-                                        <div class="form-group col-md-6">
-                                            <label for="fePassword">Password</label>
-                                            <input type="password" class="form-control" id="fePassword"
-                                                   placeholder="Password">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="feInputAddress">Address</label>
-                                        <input type="text" class="form-control" id="feInputAddress"
-                                               placeholder="1234 Main St">
+                                        <!--/ Password input -->
+                                        <span th:text="${message}"></span>
+                                        <span th:text="${error}"></span>
+                                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                                     </div>
                                     <button type="submit" class="btn btn-accent">Ingresar</button>
+                                    <h4 class="text-center mt-2"><a th:href="@{/registration}">Crear cuenta</a></h4>
+                                </div>
                                 </form>
-                            </div>
                         </div>
                     </li>
                 </ul>
@@ -64,6 +53,6 @@
 
 <div th:replace="client/fragments/footer::standard-footer"></div>
 
-<div th:replace="client/fragments/footer::script-files"></div>
+<div th:replace="client/fragments/footer::script-simple"></div>
 </body>
 </html>
