--- a/src/main/resources/templates/client/fragments/navbar.html
+++ b/src/main/resources/templates/client/fragments/navbar.html
@@ -5,7 +5,11 @@
     <title>tupunto</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Loader -->
+    <script th:src="@{/assets/js/pace.min.js}"></script>
+    <link th:src="@{/assets/css/pace.css}" rel="stylesheet" />
     <!--CSS REQUIRED-->
+
     <link rel="icon" th:href="@{/assets/img/favicon.ico}">
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/bootstrap.min.css}" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -20,6 +24,9 @@
     <title>tupunto</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Loader -->
+    <script th:src="@{/assets/js/pace.min.js}"></script>
+    <link th:src="@{/assets/css/pace.css}" rel="stylesheet" />
     <!--CSS REQUIRED-->
     <link rel="icon" th:href="@{/assets/img/favicon.ico}">
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/bootstrap.min.css}" crossorigin="anonymous">
