--- a/src/main/resources/templates/client/contact-us.html
+++ b/src/main/resources/templates/client/contact-us.html
@@ -8,6 +8,7 @@
     </div>
 </header>
 <body>
+<div th:replace="client/fragments/navbar::loader"></div>
 <div class="contact section-invert py-4">
     <h3 class="section-title text-center m-5">Contáctanos</h3>
     <div class="container py-4">
