--- a/src/main/resources/templates/client/inline/map-config-description.html
+++ b/src/main/resources/templates/client/inline/map-config-description.html
@@ -15,7 +15,7 @@
         var interestSize = 1;
 
         var markerIcon = {
-            url: 'http://image.flaticon.com/icons/svg/252/252025.svg',
+            url: 'https://image.flaticon.com/icons/svg/252/252025.svg',
             scaledSize: scaledSizeMarker,
             origin: originMarker,
             anchor: anchorMarker
