--- a/src/main/resources/templates/client/inline/map-config-search.html
+++ b/src/main/resources/templates/client/inline/map-config-search.html
@@ -19,7 +19,7 @@
         var originMarker = new google.maps.Point(0, 0);
         var anchorMarker = new google.maps.Point(0,44);
         var markerIcon = {
-            url: 'http://image.flaticon.com/icons/svg/252/252025.svg',
+            url: 'https://image.flaticon.com/icons/svg/252/252025.svg',
             scaledSize: scaledSizeMarker,
             origin: originMarker,
             anchor: anchorMarker
