--- a/src/main/resources/templates/client/client-login.html
+++ b/src/main/resources/templates/client/client-login.html
@@ -8,6 +8,7 @@
     </div>
 </header>
 <body>
+<div th:replace="client/fragments/navbar::loader"></div>
 <div class="container-fluid mt-4">
     <div class="row d-flex justify-content-center">
         <div class="col-lg-4">
