--- a/src/main/resources/templates/client/search.html
+++ b/src/main/resources/templates/client/search.html
@@ -6,6 +6,7 @@
 <script async defer src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyCXeby84Czz7k7aBjHuUGw8BZEhhl-k_qI"></script>
 
 <body class="normal-line-height">
+<div th:replace="client/fragments/navbar::loader"></div>
 <!--nav bar -->
 <header id="menu-search" class="bg-light">
     <nav th:replace="client/fragments/navbar::commun"></nav>
