Validation for register

--- a/src/main/resources/templates/client/client-registration.html
+++ b/src/main/resources/templates/client/client-registration.html
@@ -32,7 +32,7 @@
                                                    id="email" placeholder="Correo electronico">
                                         </div>
                                         <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
-                                              class="text-danger"></span>
+                                              class="pl-2 text-danger"></span>
                                         <!--/ Email input -->
                                         <!-- Username input -->
                                         <div class="form-group col-md-12">
@@ -42,7 +42,7 @@
                                                    id="username" placeholder="Usuario">
                                         </div>
                                         <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"
-                                              class="text-danger"></span>
+                                              class="pl-2 text-danger"></span>
                                         <!--/ Username input -->
                                         <!-- Password input -->
                                         <div class="form-group col-md-12">
@@ -52,7 +52,7 @@
                                                    id="password" placeholder="Contraseña">
                                         </div>
                                         <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
-                                              class="text-danger"></span>
+                                              class="pl-2 text-danger"></span>
                                         <!--/ Password input -->
                                         <!-- ReconfirmPassword input -->
                                         <div class="form-group col-md-12">
@@ -63,7 +63,7 @@
                                         </div>
                                         <span th:if="${#fields.hasErrors('passwordConfirm')}"
                                               th:errors="*{passwordConfirm}"
-                                              class="text-danger"></span>
+                                              class="pl-2 text-danger"></span>
                                         <!--/ ReconfirmPassword input -->
 
                                     </div>
