--- a/src/main/resources/templates/client/error.html
+++ b/src/main/resources/templates/client/error.html
@@ -13,7 +13,7 @@
     <div class="error__content">
         <h2 th:text="${error}"></h2>
         <h3>Something went wrong!</h3>
-        <p>There was a problem on our end. Please try again later.</p>
+        <p th:text="${message}"></p>
 
     </div>
 </div>
