--- a/src/main/resources/templates/client/fragments/navbar.html
+++ b/src/main/resources/templates/client/fragments/navbar.html
@@ -42,7 +42,7 @@
                 <a class="index-nav-title nav-link title-help-text-md" th:href="@{/}">Inicio</a>
             </li>
             <li class="nav-item w-100">
-                <a class="index-nav-title nav-link title-help-text-md" href="#">Mi cuenta</a>
+                <a class="index-nav-title nav-link title-help-text-md" th:href="@{/login}">Mi cuenta</a>
             </li>
             <li class="nav-item w-100">
                 <a class="index-nav-title nav-link title-help-text-md " href="#">Nosotros</a>
@@ -67,7 +67,7 @@
                 <a class="nav-link" th:href="@{/}">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Mi cuenta</a>
+                <a class="nav-link" th:href="@{/login}">Mi cuenta</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Nosotros</a>
