--- a/src/main/resources/templates/client/client-login.html
+++ b/src/main/resources/templates/client/client-login.html
@@ -23,21 +23,21 @@
                                 <div class="form-group d-flex flex-column justify-content-center" th:classappend="${error} ? 'has-error':''">
                                     <div class="form-row">
                                         <!-- Username input -->
-                                        <div class="form-group col-md-12">
+                                        <div class="form-group col-md-12 mb-2">
                                             <label for="email">Correo electronico</label>
-                                            <input type="email" class="form-control" id="email"
+                                            <input name="email" type="email" class="form-control" id="email"
                                                    placeholder="Correo electronico">
                                         </div>
                                         <!--/ Username input -->
                                         <!-- Password input -->
-                                        <div class="form-group col-md-12">
+                                        <div class="form-group col-md-12 mb-2">
                                             <label for="password">Contraseña</label>
-                                            <input type="password" class="form-control" id="password"
+                                            <input name="password" type="password" class="form-control" id="password"
                                                    placeholder="Contraseña">
                                         </div>
                                         <!--/ Password input -->
-                                        <span class="pl-2 text-danger" th:text="${message}"></span>
-                                        <span class="pl-2 text-danger" th:text="${error}"></span>
+                                        <span class="pl-2 text-danger mb-2" th:text="${message}"></span>
+                                        <span class="pl-2 text-danger mb-2" th:text="${error}"></span>
                                         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                                     </div>
                                     <button type="submit" class="btn btn-accent">Ingresar</button>
