User login domains ready

--- a/src/main/resources/templates/client/search.html
+++ b/src/main/resources/templates/client/search.html
@@ -39,9 +39,9 @@
                                     <div class="salient-img">
                                         <img class="card-img-top" th:src="@{/assets/img/house1.jpg}"
                                              alt="Card image cap">
-                                        <div class="btn btn-sm salient-action">
+                                        <dsearch-resultsiv class="btn btn-sm salient-action">
                                             <span>Alquiler</span>
-                                        </div>
+                                        </dsearch-resultsiv>
                                         <div class="salient-fav fav-format">
                                             <i class="fas fa-star text-warning"></i>
                                         </div>
