--- a/src/main/resources/templates/client/dashboard.html
+++ b/src/main/resources/templates/client/dashboard.html
@@ -23,7 +23,8 @@
         <div class="col-md-9">
             <div class="container">
                 <div class="row">
-                    <div id="client-profile" class="col-md-12 hidden"></div>
+                    <div id="client-profile" class="col-md-12 hidden">
+                    </div>
                     <div id="client-request" class="col-md-12 hidden"></div>
                     <div id="client-my-space" class="col-md-12 hidden"></div>
                 </div>
