--- a/src/main/resources/templates/client/description.html
+++ b/src/main/resources/templates/client/description.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 
-<head th:insert="client/fragments/navbar::header-files"></head>
+<head th:insert="fragments/navbar::header-files"></head>
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyCXeby84Czz7k7aBjHuUGw8BZEhhl-k_qI"></script>
 <script defer th:src="@{/assets/js/client/marker-with-label.js}"></script>
 
 <body>
-<div th:replace="client/fragments/navbar::loader"></div>
+<div th:replace="fragments/navbar::loader"></div>
 <header>
     <div class="bg-light pr-1 pl-1">
-        <nav th:replace="client/fragments/navbar::commun"></nav>
+        <nav th:replace="fragments/navbar::commun"></nav>
     </div>
 </header>
 <div class="container mt-4">
