--- a/src/main/resources/templates/client/registration.html
+++ b/src/main/resources/templates/client/registration.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="client/fragments/navbar::header-simple"></head>
+<head th:replace="fragments/navbar::header-simple"></head>
 <header>
     <div class="bg-light pr-1 pl-1">
-        <nav th:replace="client/fragments/navbar::commun"></nav>
+        <nav th:replace="fragments/navbar::commun"></nav>
     </div>
 </header>
 <body>
-<div th:replace="client/fragments/navbar::loader"></div>
+<div th:replace="fragments/navbar::loader"></div>
 
 <div class="container-fluid mt-4">
     <div class="row d-flex justify-content-center">
