No view resolver error

--- a/src/main/resources/templates/visual/contact-us.html
+++ b/src/main/resources/templates/visual/contact-us.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 
-<head th:replace="fragments/navbar::header-files"></head>
+<head th:replace="visual/fragments/navbar::header-files"></head>
 <header>
     <div class="bg-light pr-1 pl-1">
-        <nav th:replace="fragments/navbar::commun"></nav>
+        <nav th:replace="visual/fragments/navbar::commun"></nav>
     </div>
 </header>
 <body>
-<div th:replace="fragments/navbar::loader"></div>
+<div th:replace="visual/fragments/navbar::loader"></div>
 <div class="contact section-invert py-4">
     <h3 class="section-title text-center m-5">Contáctanos</h3>
     <div class="container py-4">
@@ -44,9 +44,9 @@
     </div>
 </div>
 
-<div th:replace="client/fragments/footer::standard-footer"></div>
+<div th:replace="visual/fragments/footer::standard-footer"></div>
 
-<div th:replace="client/fragments/footer::script-files"></div>
+<div th:replace="visual/fragments/footer::script-files"></div>
 
 </body>
 </html>
