--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/navbar::header-simple"></head>
+<head th:replace=""></head>
 <header>
     <div class="bg-light pr-1 pl-1">
-        <nav th:replace="fragments/navbar::commun"></nav>
+        <nav th:replace="visual/fragments/navbar::commun"></nav>
     </div>
 </header>
 <body>
-<div th:replace="fragments/navbar::loader"></div>
+<div th:replace="visual/fragments/navbar::loader"></div>
 
-<body>
 <div class="container-fluid h-100 w-100">
     <div class="row">
         <div class="col-md-3">
