--- a/src/main/resources/templates/client/registration.html
+++ b/src/main/resources/templates/client/registration.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="visual/fragments/navbar::header-simple"></head>
+<head th:replace="fragments/navbar::header-simple"></head>
 <header>
     <div class="bg-light pr-1 pl-1">
-        <nav th:replace="visual/fragments/navbar::commun"></nav>
+        <nav th:replace="fragments/navbar::commun"></nav>
     </div>
 </header>
 <body>
-<div th:replace="visual/fragments/navbar::loader"></div>
+<div th:replace="fragments/navbar::loader"></div>
 
 <div class="container-fluid mt-4">
     <div class="row d-flex justify-content-center">
@@ -79,8 +79,8 @@
 </div>
 
 
-<div th:replace="visual/fragments/footer::standard-footer"></div>
+<div th:replace="client/fragments/footer::standard-footer"></div>
 
-<div th:replace="visual/fragments/footer::script-simple"></div>
+<div th:replace="client/fragments/footer::script-simple"></div>
 </body>
 </html>
